--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,6 +18,8 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.0",
+    "fastify-plugin": "^5.0.1",
+    "googleapis": "^144.0.0",
     "kysely": "^0.27.5",
     "pg": "^8.13.1",
     "zod": "^3.24.1"
