--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ STORAGE_PATH=./storage
 
 # Renderer service
 RENDERER_URL=http://localhost:3001
+
+# Frontend URL (for OAuth redirects)
+FRONTEND_URL=http://localhost:5173
