--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -10,6 +10,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "chart.js": "^3.9.1",
+    "chartjs-node-canvas": "^4.1.6",
     "fastify": "^5.2.0",
     "handlebars": "^4.7.8",
     "puppeteer": "^23.11.1"
